@@ -1,3 +1,8 @@
+2012-11-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* theme.py, com.googlecode.gfeedline.gschema.xml.in: Changed the
+	  name of default theme.
+
 2012-11-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 2.0.1 release.
